--- a/app/src/main/res/drawable/red_circle.xml
+++ b/app/src/main/res/drawable/red_circle.xml
@@ -2,11 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="#FF5252" />
+    <solid android:color="#FF8A80" />
 
     <size
-        android:width="60dp"
-        android:height="60dp" />
+        android:width="50dp"
+        android:height="50dp" />
     <stroke
         android:width="2dp"
         android:color="#F0FFFF" />
