--- a/app/src/main/res/layout/head_layout.xml
+++ b/app/src/main/res/layout/head_layout.xml
@@ -12,8 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="DrugName"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/TodayDosage"
@@ -21,8 +20,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="TodayDosage"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        android:gravity="right"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/TotalDosage"
@@ -31,5 +30,6 @@
         android:layout_weight="1"
         android:text="TotalDosage"
         android:textSize="20sp"
+        android:gravity="right"
         android:textStyle="bold" />
 </LinearLayout>
