--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,16 +2,29 @@
     <!-- Base application theme. -->
     <style name="Theme.TakeCare" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <!--        <item name="colorPrimary">@color/purple_500</item>-->
+        <!--        <item name="colorPrimaryVariant">@color/purple_700</item>-->
+        <!--        <item name="colorOnPrimary">@color/white</item>-->
+        <item name="colorPrimary">@color/Peach</item>
+        <item name="colorPrimaryVariant">@color/bright_yellow_crayola</item>
+        <item name="colorOnPrimary">@color/smoky_black</item>
+        <item name="android:textColor">@color/smoky_black</item>
+
+
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <!--        <item name="colorSecondary">@color/teal_200</item>-->
+        <!--        <item name="colorSecondaryVariant">@color/teal_700</item>-->
+        <!--        <item name="colorOnSecondary">@color/black</item>-->
+
+        <item name="colorSecondary">@color/Peach</item>
+        <item name="colorSecondaryVariant">@color/champagne</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
+        <item name="android:textViewStyle">@style/NUOSUTextViewStyle</item>
+        <item name="android:buttonStyle">@style/NUOSUButtonStyle</item>
     </style>
 
     <style name="Theme.TakeCare.NoActionBar">
@@ -22,4 +35,12 @@
     <style name="Theme.TakeCare.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.TakeCare.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="NUOSUTextViewStyle" parent="android:Widget.TextView">
+        <item name="fontFamily">@font/nuosu_regular</item>
+    </style>
+
+    <style name="NUOSUButtonStyle" parent="android:Widget.Button">
+        <item name="fontFamily">@font/nuosu_regular</item>
+    </style>
 </resources>
