--- a/app/src/main/res/layout/activity_patient.xml
+++ b/app/src/main/res/layout/activity_patient.xml
@@ -49,8 +49,8 @@
             <TextView
                 android:id="@+id/TodayDosage"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_height="0dp"
+                android:layout_weight="0"
                 android:text="TodayDosage"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -60,7 +60,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="TotalDosage"
+                android:text="Pills Taken"
                 android:textSize="20sp"
                 android:textStyle="bold" />
         </LinearLayout>
