--- a/app/src/main/res/layout/activity_create_medicine.xml
+++ b/app/src/main/res/layout/activity_create_medicine.xml
@@ -46,7 +46,7 @@
         android:layout_marginEnd="16dp"
         android:ems="10"
         android:hint="Dosage"
-        android:inputType="text"
+        android:inputType="number"
         android:padding="10dp"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
