--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,19 +5,27 @@
         <!--        <item name="colorPrimary">@color/purple_500</item>-->
         <!--        <item name="colorPrimaryVariant">@color/purple_700</item>-->
         <!--        <item name="colorOnPrimary">@color/white</item>-->
-        <item name="colorPrimary">@color/Peach</item>
-        <item name="colorPrimaryVariant">@color/bright_yellow_crayola</item>
+
+        <!--        <item name="colorPrimary">@color/Peach</item>-->
+        <!--        <item name="colorPrimaryVariant">@color/bright_yellow_crayola</item>-->
+        <!--        <item name="colorOnPrimary">@color/smoky_black</item>-->
+        <!--        <item name="android:textColor">@color/smoky_black</item>-->
+
+        <item name="colorPrimary">@color/blue_crayola</item>
+        <item name="colorPrimaryVariant">@color/periwinkle_crayola</item>
         <item name="colorOnPrimary">@color/smoky_black</item>
         <item name="android:textColor">@color/smoky_black</item>
-
-
         <!-- Secondary brand color. -->
         <!--        <item name="colorSecondary">@color/teal_200</item>-->
         <!--        <item name="colorSecondaryVariant">@color/teal_700</item>-->
         <!--        <item name="colorOnSecondary">@color/black</item>-->
 
-        <item name="colorSecondary">@color/Peach</item>
-        <item name="colorSecondaryVariant">@color/champagne</item>
+        <!--        <item name="colorSecondary">@color/Peach</item>-->
+        <!--        <item name="colorSecondaryVariant">@color/champagne</item>-->
+        <!--        <item name="colorOnSecondary">@color/black</item>-->
+
+        <item name="colorSecondary">@color/blue_crayola</item>
+        <item name="colorSecondaryVariant">@color/white2</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
